--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 alto_logger     = "0.3.7"
-anyhow          = "1.0.60"
+anyhow          = "=1.0.59"
 async-trait     = "0.1.57"
 log             = "0.4.17"
 serde           = { version = "1.0.142", features = ["derive"] }
@@ -13,7 +13,7 @@ serde_json      = "1.0.83"
 serde_yaml      = "0.9.4"
 serenity        = "0.11.5"
 simple_env_load = "0.2.0"
-time = { version = "0.3.12", features = ["local-offset"] }
+time            = { version = "0.3.12", features = ["local-offset"] }
 tokio           = { version = "1.20.1", features = ["fs", "rt", "sync", "io-util", "net", "macros"] }
 tokio-stream    = { version = "0.1.9", features = ["sync"] }
 
