--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 alto_logger     = "0.3.7"
 anyhow          = "=1.0.59"
 async-trait     = "0.1.57"
+indoc = "1.0.7"
 log             = "0.4.17"
+reqwest = { version = "0.11.11", features = ["json"] }
+rspotify = { version = "0.11.5", features = ["cli"] }
 serde           = { version = "1.0.142", features = ["derive"] }
 serde_json      = "1.0.83"
 serde_yaml      = "0.9.4"
