--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 alto_logger     = "0.3.7"
 anyhow          = "=1.0.59"
 async-trait     = "0.1.57"
+fastrand = "1.8.0"
+fastrand_ext = { git = "https://github.com/museun/fastrand_ext", version = "0.1.0" }
 indoc = "1.0.7"
 log             = "0.4.17"
+once_cell = "1.13.0"
 regex = "1.6.0"
 reqwest = { version = "0.11.11", features = ["json"] }
 ron = "0.7.1"
@@ -20,8 +23,12 @@ serde_yaml      = "0.9.4"
 serenity        = "0.11.5"
 simple_env_load = "0.2.0"
 time            = { version = "0.3.12", features = ["local-offset"] }
-tokio           = { version = "1.20.1", features = ["fs", "rt", "sync", "io-util", "net", "macros"] }
+tokio           = { version = "1.20.1", features = ["fs", "rt", "sync", "io-util", "net", "macros", "test-util"] }
 tokio-stream    = { version = "0.1.9", features = ["sync"] }
 toml = "0.5.9"
+url = "2.2.2"
 
 what_theme   = { git = "https://github.com/museun/what_theme", version = "0.1.0" }
+
+[dev-dependencies]
+insta = "1.17.2"
