--- a/shook_local/Cargo.toml
+++ b/shook_local/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "=1.0.59"
+anyhow = "1.0.61"
 gumdrop = "0.8.1"
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = "1.0.83"
