--- a/shook/Cargo.toml
+++ b/shook/Cargo.toml
@@ -32,6 +32,7 @@ what_theme   = { git = "https://github.com/museun/what_theme", version = "0.1.0"
 persist      = { git = "https://github.com/museun/persist", version = "0.1.0", features = ["tokio", "json", "yaml"] }
 
 shook_core     = { path = "../shook_core" }
+shook_config   = { path = "../shook_config" }
 shook_helix    = { path = "../shook_helix" }
 shook_twitch   = { path = "../shook_twitch" }
 shook_twilight = { path = "../shook_twilight" }
