--- a/shook_local/Cargo.toml
+++ b/shook_local/Cargo.toml
@@ -3,12 +3,14 @@ name = "shook_local"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 anyhow = "1.0.61"
 gumdrop = "0.8.1"
+log = "0.4.17"
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = "1.0.83"
 tokio = { version = "1.20.1", features = ["net", "macros", "rt", "io-util", "io-std"] }
 tokio-stream = { version = "0.1.9", features = ["sync"] }
+
+shook_core = { path = "../shook_core" }
+shook_twitch = { path = "../shook_twitch" }
