--- a/shook_twitch/Cargo.toml
+++ b/shook_twitch/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1.20.1", features = ["net", "io-util", "rt"] }
 
 shook_core = { path = "../shook_core" }
 shook_config = { path = "../shook_config" }
+tokio-stream = "0.1.9"
