--- a/shook_what_song/Cargo.toml
+++ b/shook_what_song/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.143", features = ["derive"] }
 serde_json = "1.0.83"
 simple_env_load = "0.2.0"
 tokio = { version = "1.20.1", features = ["macros", "rt", "fs", "io-util", "net"] }
+tower-http = { version = "0.3.4", features = ["auth"] }
