--- a/shook_helix/Cargo.toml
+++ b/shook_helix/Cargo.toml
@@ -9,5 +9,5 @@ reqwest = { version = "0.11.11", features = ["json"] }
 serde = { version = "1.0.143", features = ["derive"] }
 time = { version = "0.3.13", features = ["parsing", "formatting", "local-offset"] }
 
-shook_core = { path = "../shook_core" }
-shook_config = { path = "../shook_config" }
+shook_core = { git = "https://github.com/museun/shook" }
+shook_config = { git = "https://github.com/museun/shook" }
