--- a/shook_local/Cargo.toml
+++ b/shook_local/Cargo.toml
@@ -12,5 +12,5 @@ serde_json = "1.0.83"
 tokio = { version = "1.20.1", features = ["net", "macros", "rt", "io-util", "io-std"] }
 tokio-stream = { version = "0.1.9", features = ["sync"] }
 
-shook_core = { path = "../shook_core" }
-shook_twitch = { path = "../shook_twitch" }
+shook_core = { git = "https://github.com/museun/shook" }
+shook_twitch = { git = "https://github.com/museun/shook" }
