--- a/shook_twitch/Cargo.toml
+++ b/shook_twitch/Cargo.toml
@@ -9,6 +9,6 @@ log = "0.4.17"
 serde = { version = "1.0.143", features = ["derive"] }
 tokio = { version = "1.20.1", features = ["net", "io-util", "rt"] }
 
-shook_core = { path = "../shook_core" }
-shook_config = { path = "../shook_config" }
+shook_core = { git = "https://github.com/museun/shook" }
+shook_config = { git = "https://github.com/museun/shook" }
 tokio-stream = "0.1.9"
