--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
 ]
 
 [patch.'https://github.com/museun/shook']
+shook             = { path = "shook" }
 shook_brain_make  = { path = "shook_brain_make" }
 shook_brain_serve = { path = "shook_brain_serve" }
 shook_config      = { path = "shook_config" }
